fix dark mode title and navbar font at small size

--- a/_brand/sass/ark.scss
+++ b/_brand/sass/ark.scss
@@ -1,8 +1,12 @@
 @import "utils";
 
-// branding ovverides
+// branding overrides
 .navbar {
   --bs-navbar-active-color: #b8860b;
+}
+
+.navbar-brand {
+  font-family: 'Poly', serif;
 }
 
 // branding BEM (Block Element Modifier) https://css-tricks.com/bem-101/
@@ -12,6 +16,7 @@
   &__content,
   &__footer {
     font-family: 'Poly', serif;
+    color: var(--bs-body-color);
   }
   &__tagline
   &__navbar {
